// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`success: renders checked true correctly 1`] = `
<div
  className="vlag-switch"
>
  <label
    className="vlag-switch__label"
  >
    <div
      className="vlag-switch__item vlag-switch__item-active "
    >
      <div
        className="vlag-switch__item__box"
      />
      <div
        className="vlag-switch__item__dots"
      />
    </div>
  </label>
</div>
`;

exports[`success: renders correctly 1`] = `
<div
  className="vlag-switch"
>
  <label
    className="vlag-switch__label"
  >
    <div
      className="vlag-switch__item  "
    >
      <div
        className="vlag-switch__item__box"
      />
      <div
        className="vlag-switch__item__dots"
      />
    </div>
  </label>
</div>
`;

exports[`success: renders disabled true correctly 1`] = `
<div
  className="vlag-switch"
>
  <label
    className="vlag-switch__label"
  >
    <div
      className="vlag-switch__item  vlag-switch__item-disabled"
    >
      <div
        className="vlag-switch__item__box"
      />
      <div
        className="vlag-switch__item__dots"
      />
    </div>
  </label>
</div>
`;
